@@ -175,7 +175,7 @@ function content_copy_export($form_values) {
     $groups = array_filter($form_values['groups']);
     foreach ($groups as $group) {
       $group_state = array('values' => array('group_name' => $group));
-      drupal_execute('fieldgroup_edit_group_form', $group_state, $form_values['type_name'], $group, 'edit');
+      drupal_execute('fieldgroup_group_edit_form', $group_state, $form_values['type_name'], $group, 'edit');
     }
   }
 
@@ -203,7 +203,7 @@ function content_copy_export($form_values) {
             $field_state['values']['group'] = $group_name;
           }
         }
-        drupal_execute('_content_admin_field', $field_state, $form_values['type_name'], $field_name);
+        drupal_execute('content_field_edit_form', $field_state, $form_values['type_name'], $field_name);
       }
     }
   }
@@ -426,7 +426,7 @@ function content_copy_import_form_submit($form, &$form_state) {
  * Intervene to run form through macro when doing export
  */
 function content_copy_form_alter(&$form, &$form_state, $form_id) {
-  $alter_forms = array('node_type_form', '_content_admin_field', 'fieldgroup_edit_group_form');
+  $alter_forms = array('node_type_form', 'content_field_edit_form', 'fieldgroup_group_edit_form');
   if (isset($GLOBALS['content_copy']) && $GLOBALS['content_copy']['status'] == 'export' && in_array($form_id, $alter_forms)) {
     $form['#submit'][] = 'content_copy_record_macro';
   }
@@ -504,7 +504,7 @@ function content_copy_record_macro($form, &$form_state) {
       $GLOBALS['content_copy']['count'] += sizeof($edit) + 5;
       break;
 
-    case 'fieldgroup_edit_group_form':
+    case 'fieldgroup_group_edit_form':
       $subs['groups'][] = $edit;
       $GLOBALS['content_copy']['count'] += sizeof($edit) + 5;
       break;
