@@ -52,6 +52,7 @@ of your cck/ folder before uploading the new files, in order to avoid duplicates
 - Fix PHP warnings on node display for hidden fields inside fieldgroups.
 - #198502 Prevent field module upgrades from running before content.module upgrades.
 - Content copy: Fix broken group export as a result of #296301.
+- #304828 Clean up function names in content.admin.inc.
 
 CCK 6.2.rc6
 ===========
